--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<!-- Proudly coded by Billy (https://bybilly.uk) -->
-<!-- Version: 1.9 -->
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<!-- Info meta tags, important for social media + SEO -->
-	<title>Mexplex - Sitio web oficial</title>
 	
+	<title>Mexplex - Sitio web oficial</title>
 	<meta name="description" content="El mejor servidor de survival 1.15.2 IP 'mx.mexplex.com'.">
-	<meta property="og:title" content="MyServer - Official Website Portal">
+	<meta property="og:title" content="Mexplex - el mejor servidor survival 1.15.2">
 	<meta property="og:site_name" content="Mexplex">
 	<meta property="og:description" content="El mejor servidor de survival 1.15.2 IP 'mx.mexplex.com'.">
 	<meta property="og:image" content="https://imgur.com/8XRF8yq">
@@ -24,13 +20,11 @@
 <body>
 	<div class="container">
 		<div class="">
-			<!-- In the img folder, upload your logo -->
-			<!-- Make sure you name it 'logo.png' -->
+
 			<img src="img/logo.png" class="loguito " alt="Mexplex logo">
 		</div>
 
 		<div class="items">
-			<!-- Replace # with your forum URL-->
 			<a href="https://discord.gg/kQh3Yef" class="item forums">
 			<div>
 				<img src="img/forums.png" alt="Minecraft forums icon" class="img">
