--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
 	<title>Mexplex - Sitio web oficial</title>
-	<meta name="description" content="El mejor servidor de survival 1.15.2 IP 'mx.mexplex.com'.">
+	<meta name="description" content="El mejor servidor de survival 1.15.2 IP 'mc.mexplex.com'.">
 	<meta property="og:title" content="Mexplex - el mejor servidor survival 1.15.2">
 	<meta property="og:site_name" content="Mexplex">
-	<meta property="og:description" content="El mejor servidor de survival 1.15.2 IP 'mx.mexplex.com'.">
+	<meta property="og:description" content="El mejor servidor de survival 1.15.2 IP 'mc.mexplex.com'.">
 	<meta property="og:image" content="https://imgur.com/8XRF8yq">
 	<meta property="og:url" content="https://mexplex.com/">
 	<meta name="twitter:card" content="summary_large_image">
@@ -51,8 +51,8 @@
 		</div>
 
 		<div class="playercount">
-			<p>Join <span class="sip" data-ip="mc.mexplex.com" data-port="25565">
-			0</span> other players on <span class="ip">mc.mexplex.com</span></p>
+			<p>Únete a otros <span class="sip" data-ip="mc.mexplex.com" data-port="25565">
+			0</span> jugadores en <span class="ip">mc.mexplex.com</span></p>
 		</div>
 	</div>
 
